# infinity_ws_plotly_dash

./: 404.html  EMENTA DATA SCIENCE (PFS).docx  EMENTA PYTHON.docx  index.html  index.md  list_dict.ipynb  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  sitemap.xml  test.py
cientif_py/: jupyter_intro.html  jupyter_intro.ipynb  numpy_intro.html  numpy_intro.ipynb
comp_var/: list_dict.html  list_dict.ipynb
data_structures/: datastructures.html
docs/: index.md
docs/cientif_py/: numpy_intro.ipynb
docs/data_structures/: datastructures.ipynb
docs/pandas_intro/: MyFile.txt  csv_example.txt  pandas_intro.ipynb  pandas_intro_01.ipynb  pandas_intro_02.ipynb  pandas_intro_03.ipynb  (+1 more)
flask/: hello_flask.html  hello_flask.ipynb
pandas_intro/: MyFile.txt  basic_concepts.html  basic_concepts.ipynb  csv_example.txt  pandas_intro.html  pandas_intro.ipynb  pandas_intro_01.html  pandas_intro_02.html  pandas_intro_02.ipynb  pandas_intro_03.html  pandas_intro_04.html  pandas_intro_04.ipynb  test.csv  test.xlsx
plotly/: bar_chart.html  bar_chart.ipynb  box_plot.html  box_plot.ipynb  boxplot_01.html  boxplot_02.html  boxplot_03.html  bubble_chart.html  bubble_chart.ipynb  hist.html  histogram.html  histogram.ipynb  iris_data.html  temp-plot.html
plotly_basics/: data_e_layout.html  data_e_layout.ipynb  plotly_basics.html  plotly_basics.ipynb  scatter1.html  scatter_with_layout.html  temp-plot.html
python_example/: list_example_02.html  list_example_02.py  list_example_03.html  list_example_03.py  list_examples.html  list_examples.py
venv_basic/: venv.html  venv.md
(+37 files in other folders)
