[tool.poetry]
name = "infinity_ws_plotly_dash"
version = "0.1.0"
description = ""
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.7.0"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
mkdocs = "mkdocs jupyter"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
